# propio_one

./: .gitignore  README.md  env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  chat.py  websocket.py
backend/app/services/: __init__.py  agent.py  realtime_service.py
backend/examples/: langchain_app.py  mlflow_test.py  whisper_service.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/components/chat/: chat-interface.tsx
frontend/src/components/layout/: sidebar.tsx
scripts/: start.ps1
