[project]
name = "monitoring"
version = "0.1.0"
description = "LangChain Agent Backend Service with MLflow Monitoring"
requires-python = ">=3.11"

dependencies = [
    # FastAPI and Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    
    # LangChain and AI
    "langchain>=1.2.0",
    "langchain-core>=1.2.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-prebuilt>=1.0.5",
    "langgraph-sdk>=0.3.0",
    
    # OpenAI
    "openai>=2.14.0",
    "tiktoken>=0.12.0",
    
    # MLflow for Monitoring
    "mlflow>=2.20.0",
    
    # Data Validation
    "pydantic>=2.7.4",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.1.0",
    "xxhash>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
